--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
     
-    <title>Starter Template for Bootstrap</title>
+    <title>Bootstrap</title>
 
     <!-- Bootstrap scripts -->
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
