added greeting and waving hand

--- a/index.html
+++ b/index.html
@@ -90,9 +90,18 @@
         </ul>
       </div>
     </nav>
-    <div class="content">
-      <img src="static/home-banner.jpg" class="headerImage">
-    </div>
+      <div class="content">
+        <div class="banner">
+          <img src="static/home-banner.jpg" class="headerImage">
+        </div>
+        <div class="page container">
+          <div class="hi">
+            <h1 class="greeting">Hi!</h1>
+            <h1 class="wave">👋</h1>
+            <hr class="divider"> 
+          </div> 
+        </div>
+      </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
